--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,9 +23,21 @@ p {
   font-family: "Lato", sans-serif;
 }
 
-/* li {
-  list-style-type: none;
-} */
+.nav-scroll {
+  background: var(--white);
+  border-color: transparent;
+  padding: 0;
+  position: fixed !important;
+  top: -80px !important;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+  -webkit-transform: translateY(80px);
+  -ms-transform: translateY(80px);
+  transform: translateY(80px);
+}
 section {
   overflow-x: hidden;
 }
