--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,19 @@ p {
   -ms-transform: translateY(80px);
   transform: translateY(80px);
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Sfondo semi-trasparente */
+  display: none; /* Inizia nascosto */
+  transition: 0.5s all;
+  opacity: 0;
+}
+
 section {
   overflow-x: hidden;
 }
