--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,18 @@ p {
   transform: translateY(80px);
 }
 
+.swiper-button-next,
+.swiper-button-prev,
+.swiper-button-disabled {
+  --swiper-navigation-size: 15px;
+  /* --swiper-navigation-top-offset: 50%; */
+  --swiper-navigation-sides-offset: 10px;
+  --swiper-navigation-color: var(--white);
+  background-color: var(--red);
+  padding: 20px;
+  border-radius: 100%;
+}
+
 .overlay {
   position: fixed;
   top: 0;
