--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,24 @@ p {
   border-radius: 100%;
 }
 
+.breadcrumbs > ol > li + :before,
+.breadcrumbs > ul > li + :before {
+  content: "";
+  margin-left: 0.5rem;
+  margin-right: 0.75rem;
+  display: block;
+  height: 0.375rem;
+  width: 0.375rem;
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 0.4;
+  border-top: 1px solid;
+  border-right: 1px solid;
+  background-color: transparent;
+}
+
 .overlay {
   position: fixed;
   top: 0;
