--- a/styles/wordpress.css
+++ b/styles/wordpress.css
@@ -10,6 +10,23 @@
   .paragrafo h3 {
     font-size: 30px;
   }
+
+  .paragrafo figure img {
+    width: 60vw;
+  }
+
+  .list-style  {
+    list-style: disc;
+    margin-left: 20px;
+  }
+  
+ 
+  .line-clamp2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
   
   figcaption {
     font-size: 16px;
@@ -71,15 +88,7 @@
     justify-content: center;
   }
   
-  .list-style {
-    list-style: circle;
-    margin-left: 20px;
-  }
-  
-  .list-style-num {
-    color: var(--second_color);
-  }
-  
+ 
   .card_post {
     background-image: url(/assets/noise.webp),
       radial-gradient(
@@ -125,7 +134,12 @@
     cite {
       font-size: 19px;
     }
+    .paragrafo figure img {
+      width: 100vw;
+    }
   }
+
+  
   
   @media screen and (min-width: 1900px) {
     .paragrafo h3 {
