sezione review in chi sono pagina

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -339,7 +339,7 @@ section {
     --gap: 15rem;
   }
 
-  .eMlkQV {
+  /* .eMlkQV {
     width: 20px;
     height: 20px;
   }
@@ -394,7 +394,7 @@ section {
 
   .kzANES {
     margin: 0 !important;
-  }
+  } */
 
   .swiper-slide .swiper-slide-visible .swiper-slide-active {
     width: 580px !important;
