--- a/styles/wordpress.css
+++ b/styles/wordpress.css
@@ -27,6 +27,11 @@
   -webkit-box-orient: vertical;
 }
 
+.wp-block-list {
+  list-style: disc;
+  margin-left: 20px;
+}
+
 figcaption {
   font-size: 16px;
 }
